<resources>
    <string name="app_name">Plant Finder</string>
    <string name="select_image">Select Image</string>
    <string name="search_results">Search Image</string>
    <string name="saved_results">Saved Images</string>
    <string name="camera_image">Select Image / Take image with camera</string>
    <string name="upload_selected_area">Upload Selected Area</string>
    <string name="user_selected_image">User selected image</string>
    <string name="upload_btn">Upload</string>
    <string name="search_google">Search Google</string>
    <string name="search_bing">Search Bing</string>
    <string name="search_tineye">Search Tineye</string>
    <string name="reverse_image_search_result">Reverse image search result</string>
    <string name="view">View</string>
    <string name="save">Save</string>
    <string name="results_found">Found %1$d results from %2$s</string>
    <string name="search_timeout">%1$s took to long to respond. Try another endpoint.</string>
    <string name="search_error">Error: %1$s</string>
    <string name="similar_images">Searching for similar images on %1$s..</string>
    <string name="upload_img">Uploading image..</string>
    <string name="upload_img_success">Image uploaded successfully!</string>
    <string name="upload_img_error">A %1$s occurred while uploading image</string>
    <string name="saved_db">Saved!</string>
    <string name="no_image">No image!</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="image_from_database">Image from database</string>
    <string name="delete_dialog">Are you sure you want to delete this image? If you delete the original image, all related images will also be deleted!</string>
    <string name="cancel">Cancel</string>
    <string name="upload_img_first">You must upload an image first!</string>
    <string name="error_413">Imagefile is too large!</string>
    <string name="empty_db">No images in database!</string>
</resources>